--- a/src/main/resources/templates/editArticles.html
+++ b/src/main/resources/templates/editArticles.html
@@ -24,7 +24,7 @@
 
     <div class="uk-section">
         <div class="uk-container uk-container-small">
-            <form ng-submit="editArticle()">
+            <form ng-submit="postArticle()">
                 <div>
                     <input ng-model="writeTitle" class="uk-input" type="text" placeholder="文章标题">
                 </div>
