--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -36,7 +36,7 @@
 				            <a class="uk-button uk-button-text" href="articleContent.html">阅读全文</a>
 				        </div>
 				        <div>
-				            <a class="uk-button uk-button-text" href="#">5 评论</a>
+				            <a class="uk-button uk-button-text" href="#">{{article.commentSum}} 评论</a>
 				        </div>
 				    </div>
 
