--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="uk-margin">
-                        <input id="password" ng-model="formData.password" class="uk-input" type="text" placeholder="密码">
+                        <input id="password" ng-model="formData.password" class="uk-input" type="password" placeholder="密码">
                     </div>
                     <div class="uk-margin">
                         <button class="uk-button uk-button-primary uk-width-1-1">登录</button>
