用户注册功能

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -20,6 +20,21 @@
 					</ul>
 				</div>
 			</div>
+			<div class="uk-navbar-right">
+				<ul class="uk-navbar-nav">
+					<li>
+						<a href="">
+							<img class="uk-comment-avatar" src="https://getuikit.com/docs/images/avatar.jpg" width="50" height="50" alt="">
+						</a>
+						<div class="uk-navbar-dropdown">
+							<ul class="uk-nav uk-navbar-dropdown-nav">
+								<li><a href="#"><span class="uk-margin-small-right" uk-icon="cog"></span>设置</a></li>
+								<li><a href="/logout"><span class="uk-margin-small-right" uk-icon="sign-out"></span>退出</a></li>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</nav>
 		<div class="uk-section">
 			<div class="uk-container uk-container-small">
