--- a/src/main/resources/templates/articleContent.html
+++ b/src/main/resources/templates/articleContent.html
@@ -27,6 +27,7 @@
 					</p>
 
 				</article>
+				<a id="js-scroll-trigger" class="uk-button uk-button-danger"  uk-scroll>返回顶部</a>
 			</div>
 		</div>
 		<div class="uk-section">
