--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,6 @@
 <html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
-    <title>登录</title>
+    <title>注册</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css" />
@@ -15,25 +15,27 @@
 </head>
 <body ng-app="myApp">
 
-<div class="uk-offcanvas-content" ng-controller="LoginController">
+<div class="uk-offcanvas-content" ng-controller="RegisterController">
     <div class="uk-top-left uk-margin"><a href="home.html" class="uk-link-reset"><h1 style="color: white">Fantasy</h1></a></div>
     <div class="uk-section uk-position-center">
         <div class="uk-container uk-container-small uk-width-xlarge@m">
-            <div class="uk-margin"><h3 class="uk-text-center" style="color: white">登录</h3></div>
-            <form ng-submit="LoginUsers()">
+            <div class="uk-margin"><h3 class="uk-text-center" style="color: white">注册</h3></div>
+            <form ng-submit="registerUsers()">
                 <fieldset class="uk-fieldset">
                     <div class="uk-margin" >
                         <input id="name" ng-model="formData.username" class="uk-input" type="text" placeholder="用户名">
                     </div>
-
                     <div class="uk-margin">
                         <input id="password" ng-model="formData.password" class="uk-input" type="password" placeholder="密码">
                     </div>
                     <div class="uk-margin">
-                        <button class="uk-button uk-button-primary uk-width-1-1">登录</button>
+                        <input id="rePassword" ng-model="formData.rePassword" class="uk-input" type="password" placeholder="再次密码">
                     </div>
                     <div class="uk-margin">
-                        <a href="/register" class="uk-text-center" style="color: white">没有账号? 去注册</a>
+                        <button class="uk-button uk-button-primary uk-width-1-1">注册</button>
+                    </div>
+                    <div class="uk-margin">
+                        <a href="/login" class="uk-text-center" style="color: white">已有账号? 去登录</a>
                     </div>
                 </fieldset>
             </form>
@@ -45,9 +47,8 @@
 <script src="js/framework/uikit.min.js"></script>
 <script src="js/framework/uikit-icons.min.js"></script>
 <script src="js/framework/angular.min.js"></script>
-<script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
 <script src="js/blog/app.js"></script>
-<script src="js/blog/controller/login_controller.js"></script>
-<script src="js/blog/service/login_service.js"></script>
+<script src="js/blog/controller/register_controller.js"></script>
+<script src="js/blog/service/register_service.js"></script>
 </body>
 </html>
